@@ -25,9 +25,8 @@
     Read the <a href="../switch/">introduction</a>.
   </li>
 
-  <li>Questions?  Check out the <a href="features.html">feature list</a> or
-    read the <a href="faq.html">FAQ</a>.
-  </li>
+  <li>Questions?  Check out the <a href="faq.html">FAQ</a>.
+    </li>
 
   <li>Interested in background information?  Read our
     <a href="automated-engraving/">essay on music engraving and computer
