@@ -1,5 +1,5 @@
 [
- ("features.html", _ ("Features")),
+# ("features.html", _ ("Features")),
  ("faq.html", _ ("FAQ")),
  ("automated-engraving", _ ("Essay")),
  ("pubs.html", _ ("Publications")),
