@@ -1,5 +1,9 @@
 2005-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/about/index.html: don't link features page.
+
+	* site/about/menu-entries.py: remove Features page.
+
 	* site/about/faq.html (href): link to sponsor, not donate
 
 2005-11-22  Jan Nieuwenhuizen  <janneke@gnu.org>
